Minor tweaks for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "stockspro",
+  "homepage": "https://obilo.io/stockspro/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
